--- a/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
+++ b/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
@@ -9,13 +9,17 @@
   <style>
    </style>
 </head>
-<link rel="icon" href="./Imagenes/favicon.ico" type="image/x-icon">
+<link rel="icon" href= "./Imagenes/icono.ico" type="image/x-icon">
 <body>
   <header>
    </header>
   <main>
     </div>
-    <div class="botonera">
+    <div class="Cabecera">
+      <div class="Logo">
+          <img src="./Imagenes/logo.jpg">
+      </div>
+      <div class="botonera">
         <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
             <span>Atras</span>
             <span></span>
@@ -31,6 +35,7 @@
              <span></span>
         </button>
       </button>
+  </div>
     </div>
     <div class="container2">
       <h2>Machineseeker EHF Champions League 2023/2024</h2>
@@ -69,36 +74,6 @@
             <h1>Tiros: 33</h1>
             <h1>Goles: 28</h1>
             <h1>Eficiencia de tiros: 84,8%</h1>
-          </div>
-          <div class="caja_estadisticas">
-            <h1>Partidos: 3</h1>
-            <h1>Tiros: 33</h1>
-            <h1>Goles: 27</h1>
-            <h1>Eficiencia de tiros: 81,8%</h1>
-          </div>
-          <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 43</h1>
-            <h1>Goles: 26</h1>
-            <h1>Eficiencia de tiros: 60,5%</h1>
-          </div>
-          <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 39</h1>
-            <h1>Goles: 24</h1>
-            <h1>Eficiencia de tiros: 61,5%</h1>
-          </div>
-          <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 33</h1>
-            <h1>Goles: 23</h1>
-            <h1>Eficiencia de tiros: 69,7%</h1>
-          </div>
-          <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 31</h1>
-            <h1>Goles: 21</h1>
-            <h1>Eficiencia de tiros: 67,7%</h1>
           </div>
         </div>
      <div class="container">
@@ -152,56 +127,6 @@
         <p><strong>Edad:</strong> 32</p>
         <p><strong>Altura:</strong> 2.07 m</p>
       </div>
-      <div class="jugador">
-        <h2>Jugador N° 48</h2>
-        <img src="./Imagenes/jugador48.jpg" alt="Imagen Jugador 1">
-         <img src="./Imagenes/kolstad.jpeg" alt="Imagen Jugador 1">
-         <p><strong>Equipo:</strong> Kolstad Handball (NOR)</p>
-         <p><strong>Posición:</strong> Extremo derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Gudjonsson Sigvaldi Bjørn</p>
-        <p><strong>Edad:</strong> 29</p>
-        <p><strong>Altura:</strong> 1.92 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 29</h2>
-        <img src="./Imagenes/jugador29.png" alt="Imagen Jugador 1">
-        <img src="./Imagenes/veszprem.jpeg" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> Telekom Veszprém HC (HUN)</p>
-        <p><strong>Posición:</strong> Lateral Derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Remili Nedim</p>
-        <p><strong>Edad:</strong> 28</p>
-        <p><strong>Altura:</strong> 1.95 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 24</h2>
-        <img src="./Imagenes/jugador24_2.png" alt="Imagen Jugador 1">
-        <img src="./Imagenes/aalborg.png" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> Aalborg Håndbold (DEN)</p>
-        <p><strong>Posición:</strong> Lateral Izquierdo</p>
-        <p><strong> Nombre/Apellido:</strong> Hansen Mikkel</p>
-        <p><strong>Edad:</strong> 35</p>
-        <p><strong>Altura:</strong> 1.96 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 18</h2>
-        <img src="./Imagenes/jugador18.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/RK.jpeg" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> RK Celje Pivovarna Laško (SLO)</p>
-        <p><strong>Posición:</strong> Defensor Central</p>
-        <p><strong> Nombre/Apellido:</strong> Janc Mitja</p>
-        <p><strong>Edad:</strong> 20</p>
-        <p><strong>Altura:</strong> 1.82 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 87</h2>
-        <img src="./Imagenes/jugador87.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/zagreb.jpg" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> HC Zagreb (CRO)</p>
-        <p><strong>Posición:</strong> Lateral Derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Cuni Morales Yoel</p>
-        <p><strong>Edad:</strong> 36</p>
-        <p><strong>Altura:</strong> 1.90 m</p>
-      </div>
     <h1 id="equipo2">Maximos Asistidores</h1>
     <p style="font-family: Bebas Neue, sans-serif;">
         <div class="container">
@@ -234,31 +159,6 @@
           <h1>Asistencias: 16</h1>
           <h1>Promedio de asistencias por partido: 4</h1>
       </div>
-      <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 16</h1>
-          <h1>Promedio de asistencias por partido: 4</h1>
-      </div>
-      <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 14</h1>
-          <h1>Promedio de asistencias por partido: 3.5</h1>
-      </div>
-      <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 13</h1>
-          <h1>Promedio de asistencias por partido: 3.25</h1>
-      </div>
-      <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 13</h1>
-          <h1>Promedio de asistencias por partido: 3.25</h1>
-      </div>
-      <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 13</h1>
-          <h1>Promedio de asistencias por partido: 3.25</h1>
-    </div>
   </div>
   <div class="container">
     <div class="jugador">
@@ -310,57 +210,6 @@
        <p><strong> Nombre/Apellido:</strong> Bombac Dean</p>
        <p><strong>Edad:</strong> 34</p>
        <p><strong>Altura:</strong> 1.90 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 23</h2>
-        <img src="./Imagenes/jugador23.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/kolstad.jpeg" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Kolstad Handball (NOR)</p>
-      <p><strong>Posición:</strong> Lateral Izquierdo</p>
-      <p><strong> Nombre/Apellido:</strong> Søgard Johannessen Gøran</p>
-      <p><strong>Edad:</strong> 29</p>
-      <p><strong>Altura:</strong> 1.93 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 10</h2>
-      <img src="./Imagenes/jugador10.jpg" alt="Imagen Jugador 1">
-      <img src="./Imagenes/barcelona.png" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Barça (ESP)</p>
-      <p><strong>Posición:</strong> Lateral Derecho</p>
-      <p><strong> Nombre/Apellido:</strong> Mem Dika</p>
-      <p><strong>Edad:</strong> 26</p>
-      <p><strong>Altura:</strong> 1.94 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 88</h2>
-        <img src="./Imagenes/jugador88.png" alt="Imagen Jugador 1">
-        <img src="./Imagenes/veszprem.jpeg" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Telekom Veszprém HC (HUN)</p>
-      <p><strong>Posición:</strong> Defensor Central</p>
-      <p><strong> Nombre/Apellido:</strong> Casado Marcelo Agustín</p>
-      <p><strong>Edad:</strong> 27</p>
-      <p><strong>Altura:</strong> 1.93 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 33</h2>
-      <img src="./Imagenes/jugador33.jpg" alt="Imagen Jugador 1">
-      <img src="./Imagenes/GOG.png" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> GOG (DEN)</p>
-      <p><strong>Posición:</strong> Lateral Izquierdo</p>
-      <p><strong> Nombre/Apellido:</strong> Mensing Hans Aaron</p>
-      <p><strong>Edad:</strong> 25</p>
-      <p><strong>Altura:</strong> 2.01 m</p>
-       </div>
-       <div class="jugador">
-        <h2>Jugador N° 29</h2>
-        <img src="./Imagenes/jugador29.png" alt="Imagen Jugador 1">
-        <img src="./Imagenes/veszprem.jpeg" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> Telekom Veszprém HC (HUN)</p>
-        <p><strong>Posición:</strong> Lateral Derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Remili Nedim</p>
-        <p><strong>Edad:</strong> 28</p>
-        <p><strong>Altura:</strong> 1.95 m</p>
-       </div>
     </div>
   </main>
     <footer class="footer">
