--- a/pages/deportes/BalonMano/Estadisticas/home_estadisticas.html
+++ b/pages/deportes/BalonMano/Estadisticas/home_estadisticas.html
@@ -9,28 +9,33 @@
   <style>
    </style>
 </head>
-<link rel="icon" href="./Imagenes/favicon.ico" type="image/x-icon">
+<link rel="icon" href= "./Imagenes/icono.ico" type="image/x-icon">
 <body>
   <header>
    </header>
-  <main>
+   <main>
+  </div>
+  <div class="Cabecera">
+    <div class="Logo">
+        <img src="./Imagenes/logo.jpg">
     </div>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
-            <span>Atras</span>
-            <span></span>
-         <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
-                <span>Handball</span>
-                <span></span>
-        </button>
-        <button class="animated-button">
-            <span>Deportes</span>
-            <span></span>
-        <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
-            <span>Estadisticas</span>
-             <span></span>
-        </button>
+      <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
+          <span>Atras</span>
+          <span></span>
+          <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
+              <span>Handball</span>
+              <span></span>
       </button>
+      <button class="animated-button">
+          <span>Deportes</span>
+          <span></span>
+      <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
+          <span>Estadisticas</span>
+           <span></span>
+      </button>
+    </button>
+    </div>
     </div>
     <div class="principal-1">
       <a href="estadisticas_mundial.html" target="_blank"><img src="./Imagenes/mundial.jpg" alt="mundial"></a>
