--- a/pages/deportes/BalonMano/Presentacion/home_presentacion.html
+++ b/pages/deportes/BalonMano/Presentacion/home_presentacion.html
@@ -3,78 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Depologs</title>
+  <title>Handball</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
   <link rel="stylesheet" href="botones_presentacion.css">
   <style>
-       body {
-        font-family: Bebas Neue, sans-serif;
-    background-image: url(png-clipart-handball-graphy-sports-handball-sports-shoe-fotor-bg-remover-20230919221718-transformed.png);
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-  nav {
-    display: flex;
-    justify-content: space-between;
-  }
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  nav li {
-    display: inline-block;
-    margin: 0px;
-  }
-.container {
-    padding-top: 100px;
-    float: right;
-        text-align: center;
-      }
-.footer {
-  text-align:center;
-}
-.borde {
-  background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.584),rgba(128, 128, 128, 0.258));
-        border: 3px solid black;
-        padding-top: 1px;
-        margin-bottom: 10px;
-      }
    </style>
 </head>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href= "../Estadisticas/Imagenes/icono.ico" type="image/x-icon">
 <body>
   <header>
    </header>
   <main>
-    <div class="botonera">
-      <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
-        <span>Atras</span>
-        <span></span>
-     <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
-            <span>Handball</span>
-            <span></span>
-    </button>
-    <button class="animated-button">
-        <span>Deportes</span>
-        <span></span>
-    <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
-        <span>Estadisticas</span>
-         <span></span>
-    </button>
-      </button>
     </div>
+    <div class="Cabecera">
+      <div class="Logo">
+          <img src="../Estadisticas/Imagenes/logo.jpg">
+      </div>
+      <div class="botonera">
+        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
+            <span>Atras</span>
+            <span></span>
+            <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
+                <span>Handball</span>
+                <span></span>
+        </button>
+        <button class="animated-button">
+            <span>Deportes</span>
+            <span></span>
+        <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
+            <span>Estadisticas</span>
+             <span></span>
+        </button>
+      </button>
+      </div>
+  </div>
       <div>
-        <div class="container2">
+        <div class="container">
           <div class="borde">
           <div class="photos">
         <figure>
           <p style="font-family: Bebas Neue, sans-serif;"></p>
           <h2>El handball, un deporte que ha dejado su huella imborrable en la historia del mundo deportivo.
            La historia del handball se remonta a finales del siglo XIX en Europa. Surgió como una adaptación del fútbol, pero con la particularidad de utilizar las manos en lugar de los pies para controlar la pelota. A medida que el deporte se popularizaba, se establecieron reglas y se crearon las primeras competiciones.</H2>
-          <img src="https://www.clarin.com/img/2019/12/04/xrLeAeXU_1256x620__1.jpg" alt="Foto 1">
+            <img src="https://www.clarin.com/img/2019/12/04/xrLeAeXU_1256x620__1.jpg" alt="Foto 1">
           <h3>Seleccion Argentina en HandBall</h3>
         </figure>
       </div>
