--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -791,7 +791,25 @@
     
 
     <footer>
-        <p>&#169 Depologs</p>
+        <div class="container_padre">
+
+            <div class="footer_content">
+                <h3>Contacto</h3>
+                <p>Email: depologsgerencia@gmail.com</p>
+                <p>Email 2: laboralagus@gmail.com</p>
+                <p>Cel: +542995554314</p>
+            </div>
+            <div class="footer_content">
+                <h3>Seguinos en:</h3>
+                <a href="https://www.facebook.com"><img class="iconosredes" src="./imagenes/iconos/icono_facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com"><img class="iconosredes" src="./imagenes/iconos/icono_instagram.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com"><img class="iconosredes" src="./imagenes/iconos/icono_linkedin.png" alt="Linkedin"></a>
+                <a href="https:/www.twitter.com"><img class="iconosredes" src="./imagenes/iconos/icono_twitter.png" alt="Twitter"></a>
+            </div>
+        </div>
+        <div class="derechos">
+            <p>&copy; 2023 Depologs - Todos los derechos reservados</p>
+        </div>
     </footer>
     <script src="./home_voley.js"></script>
 </body>
