--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -756,7 +756,7 @@
     </div>
     </section>
 
-    <section class="gallery" id="portafolio">
+    <!-- <section class="gallery" id="portafolio">
         <div class="contenedor_padre">
 
             <h2 class="subtitulo">Mini galeria de fotos</h2>
@@ -773,7 +773,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="imagen_light">
         <img src="./imagenes/iconos/eliminar.png" alt="" class="close">
         <img src="./imagenes/Banner-web-1200.png" alt="" class="agregar_imagen">
