--- a/pages/deportes/BalonMano/Presentacion/home_presentacion.html
+++ b/pages/deportes/BalonMano/Presentacion/home_presentacion.html
@@ -27,7 +27,7 @@
                 <span>Handball</span>
                 <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
             <span>Deportes</span>
             <span></span>
         <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
