--- a/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
+++ b/pages/deportes/BalonMano/Estadisticas/estadisticas_champions.html
@@ -20,14 +20,14 @@
           <img src="./Imagenes/logo.jpg">
       </div>
       <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
             <span>Atras</span>
             <span></span>
          <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
                 <span>Handball</span>
                 <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
             <span>Deportes</span>
             <span></span>
         <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
