--- a/pages/deportes/BalonMano/Estadisticas/estadisticas_mundial.html
+++ b/pages/deportes/BalonMano/Estadisticas/estadisticas_mundial.html
@@ -20,14 +20,14 @@
           <img src="./Imagenes/logo.jpg">
       </div>
       <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
             <span>Atras</span>
             <span></span>
             <button class="animated-button" onclick="window.location.href = '../Presentacion/home_presentacion.html'">
                 <span>Handball</span>
                 <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href = '../../../home_pages.html'" >
             <span>Deportes</span>
             <span></span>
         <button class="animated-button" onclick="window.location.href = '../Estadisticas/home_estadisticas.html'">
@@ -38,94 +38,94 @@
   </div>
     </div>
     <div class="container2">
-      <h2>Machineseeker EHF Champions League 2023/2024</h2>
+      <h2>Campeonato Mundial de Balonmano Masculino de 2023</h2>
       <h1 id="equipo1">Maximos Goleadores</h1>
         <h2>Lista de Jugadores</h2>
         </div>
         <div class="borde">
             <div class="container3">
         <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Tiros: 48</h1>
-          <h1>Goles: 31</h1>
-          <h1>Eficiencia de tiros: 64,6%</h1>
+          <h1>Partidos: 9</h1>
+          <h1>Tiros: 80</h1>
+          <h1>Goles: 60</h1>
+          <h1>Eficiencia de tiros: 75%</h1>
         </h1>
           </div>
           <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 42</h1>
-            <h1>Goles: 30</h1>
-            <h1>Eficiencia de tiros: 71,4%</h1>
+            <h1>Partidos: 7</h1>
+            <h1>Tiros: 77</h1>
+            <h1>Goles: 54</h1>
+            <h1>Eficiencia de tiros: 70%</h1>
           </div>
           <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 38</h1>
-            <h1>Goles: 29</h1>
-            <h1>Eficiencia de tiros: 76,3%</h1>
+            <h1>Partidos: 9</h1>
+            <h1>Tiros: 85</h1>
+            <h1>Goles: 53</h1>
+            <h1>Eficiencia de tiros: 62%</h1>
           </div>
           <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 34</h1>
-            <h1>Goles: 28</h1>
-            <h1>Eficiencia de tiros: 82.4%</h1>
+            <h1>Partidos: 9</h1>
+            <h1>Tiros: 70</h1>
+            <h1>Goles: 51</h1>
+            <h1>Eficiencia de tiros: 73%</h1>
           </div>
           <div class="caja_estadisticas">
-            <h1>Partidos: 4</h1>
-            <h1>Tiros: 33</h1>
-            <h1>Goles: 28</h1>
-            <h1>Eficiencia de tiros: 84,8%</h1>
+            <h1>Partidos: 6</h1>
+            <h1>Tiros: 59</h1>
+            <h1>Goles: 45</h1>
+            <h1>Eficiencia de tiros: 76%</h1>
           </div>
         </div>
      <div class="container">
     <div class="jugador">
-      <h2>Jugador N° 9</h2>
-      <img src="./Imagenes/jugador9.jpg" alt="Imagen Jugador 1">
-      <img src="./Imagenes/kielce.png" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Industria Kielce (POL)</p>
-      <p><strong>Posición:</strong> Lateral Izquierdo</p>
-      <p><strong> Nombre/Apellido:</strong> Sicko Szymon</p>
-      <p><strong>Edad:</strong> 26</p>
-      <p><strong>Altura:</strong> 2.00 m</p>
+      <h2>Jugador N° 33</h2>
+      <img src="./Imagenes/jugador33mundial.jpg" alt="Imagen Jugador 1">
+      <img src="./Imagenes/dinamarca.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Dinamarca</p>
+      <p><strong>Posición:</strong> Lateral Derecho</p>
+      <p><strong> Nombre/Apellido:</strong> Mathias Gidsel</p>
+      <p><strong>Edad:</strong> 24</p>
+      <p><strong>Altura:</strong> 1.90 m</p>
       </div>
       <div class="jugador">
-        <h2>Jugador N° 33</h2>
-        <img src="./Imagenes/jugador33.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/GOG.png" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> GOG (DEN)</p>
+        <h2>Jugador N° 4</h2>
+        <img src="./Imagenes/jugador4mundial.png" alt="Imagen Jugador 1">
+        <img src="./Imagenes/chile.png" alt="Imagen Jugador 1">
+        <p><strong>Equipo:</strong> Chile</p>
+        <p><strong>Posición:</strong> Defensor Central</p>
+        <p><strong> Nombre/Apellido:</strong> Erwin Feuchtmann</p>
+        <p><strong>Edad:</strong> 33</p>
+        <p><strong>Altura:</strong> 1.95 m</p>
+      </div>
+      <div class="jugador">
+        <h2>Jugador N° 15</h2>
+        <img src="./Imagenes/jugador15mundial.jpg" alt="Imagen Jugador 1">
+        <img src="./Imagenes/alemania.png" alt="Imagen Jugador 1">
+        <p><strong>Equipo:</strong> Alemania</p>
+        <p><strong>Posición:</strong> Defensa Central</p>
+        <p><strong> Nombre/Apellido:</strong> Juri Knorr</p>
+        <p><strong>Edad:</strong> 23</p>
+        <p><strong>Altura:</strong> 1.90 m</p>
+      </div>
+      <div class="jugador">
+        <h2>Jugador N° 43</h2>
+        <img src="./Imagenes/jugador43mundial.webp" alt="Imagen Jugador 1">
+        <img src="./Imagenes/dinamarca.png" alt="Imagen Jugador 1">
+        <p><strong>Equipo:</strong> Dinamarca</p>
         <p><strong>Posición:</strong> Lateral Izquierdo</p>
-        <p><strong> Nombre/Apellido:</strong> Mensing Hans Aaron</p>
-        <p><strong>Edad:</strong> 25</p>
-        <p><strong>Altura:</strong> 2.01 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 24</h2>
-        <img src="./Imagenes/jugador24.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/pick.jpg" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> OTP Bank - PICK Szeged (HUN)</p>
-        <p><strong>Posición:</strong> Extremo Derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Sostaric Mario</p>
-        <p><strong>Edad:</strong> 30</p>
+        <p><strong> Nombre/Apellido:</strong> Simon Pytlick</p>
+        <p><strong>Edad:</strong> 22</p>
         <p><strong>Altura:</strong> 1.93 m</p>
       </div>
       <div class="jugador">
-        <h2>Jugador N° 10</h2>
-        <img src="./Imagenes/jugador10.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/barcelona.png" alt="Imagen Jugador 1">
-        <p><strong>Equipo:</strong> Barça (ESP)</p>
-        <p><strong>Posición:</strong> Lateral Derecho</p>
-        <p><strong> Nombre/Apellido:</strong> Mem Dika</p>
-        <p><strong>Edad:</strong> 26</p>
-        <p><strong>Altura:</strong> 1.94 m</p>
-      </div>
-      <div class="jugador">
-        <h2>Jugador N° 21</h2>
-        <img src="./Imagenes/jugador21.png" alt="Imagen Jugador 1">
-         <img src="./Imagenes/PSG.png" alt="Imagen Jugador 1">
-         <p><strong>Equipo:</strong> Paris Saint-Germain Handball (FRA)</p>
-         <p><strong>Posición:</strong> Pivote</p>
-        <p><strong> Nombre/Apellido:</strong> Syprzak Kamil</p>
-        <p><strong>Edad:</strong> 32</p>
-        <p><strong>Altura:</strong> 2.07 m</p>
+        <h2>Jugador N° 4</h2>
+        <img src="./Imagenes/jugador4mundial2.jpg" alt="Imagen Jugador 1">
+         <img src="./Imagenes/islandia.png" alt="Imagen Jugador 1">
+         <p><strong>Equipo:</strong> Islandia</p>
+         <p><strong>Posición:</strong> Extremo Izquierdo</p>
+        <p><strong> Nombre/Apellido:</strong> Bjarki Már Elísson</p>
+        <p><strong>Edad:</strong> 33</p>
+        <p><strong>Altura:</strong> 1.89 m</p>
       </div>
     <h1 id="equipo2">Maximos Asistidores</h1>
     <p style="font-family: Bebas Neue, sans-serif;">
@@ -135,81 +135,81 @@
   </div>
       <div class="container3">
         <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 34</h1>
-          <h1>Promedio de asistencias por partido: 8.5</h1>
+          <h1>Partidos: 9</h1>
+          <h1>Asistencias: 52</h1>
+          <h1>Promedio de asistencias por partido: 5,7</h1>
       </div>
       <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 26</h1>
-          <h1>Promedio de asistencias por partido: 6</h1>
+          <h1>Partidos: 9</h1>
+          <h1>Asistencias: 49</h1>
+          <h1>Promedio de asistencias por partido: 5.4</h1>
       </div>
       <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 17</h1>
-          <h1>Promedio de asistencias por partido: 4.25</h1>
+          <h1>Partidos: 9</h1>
+          <h1>Asistencias: 42</h1>
+          <h1>Promedio de asistencias por partido: 4,6</h1>
       </div>
       <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 17</h1>
-          <h1>Promedio de asistencias por partido: 4.25</h1>
+          <h1>Partidos: 9</h1>
+          <h1>Asistencias: 40</h1>
+          <h1>Promedio de asistencias por partido: 4,44</h1>
       </div>
       <div class="caja_estadisticas">
-          <h1>Partidos: 4</h1>
-          <h1>Asistencias: 16</h1>
-          <h1>Promedio de asistencias por partido: 4</h1>
+          <h1>Partidos: 6</h1>
+          <h1>Asistencias: 39</h1>
+          <h1>Promedio de asistencias por partido: 6,5</h1>
       </div>
   </div>
   <div class="container">
     <div class="jugador">
+      <h2>Jugador N° 15</h2>
+      <img src="./Imagenes/jugador15mundial.jpg" alt="Imagen Jugador 1">
+      <img src="./Imagenes/alemania.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Alemania</p>
+      <p><strong>Posición:</strong> Defensa Central</p>
+      <p><strong> Nombre/Apellido:</strong> Juri Knorr</p>
+      <p><strong>Edad:</strong> 23</p>
+      <p><strong>Altura:</strong> 1.90 m</p>
+    </div>
+    <div class="jugador">
       <h2>Jugador N° 5</h2>
-      <img src="./Imagenes/jugador5.jpg" alt="Imagen Jugador 1">
-      <img src="./Imagenes/kolstad.jpeg" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Kolstad Handball (NOR)</p>
+      <img src="./Imagenes/jugador5mundial.JPG" alt="Imagen Jugador 1">
+      <img src="./Imagenes/dinamarca.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Dinamarca</p>
       <p><strong>Posición:</strong> Defensor Central</p>
-      <p><strong> Nombre/Apellido:</strong> Sagosen Sander</p>
+      <p><strong> Nombre/Apellido:</strong> Sander Sagosen</p>
       <p><strong>Edad:</strong> 28</p>
       <p><strong>Altura:</strong> 1.95 m</p>
     </div>
     <div class="jugador">
-      <h2>Jugador N° 14</h2>
-      <img src="./Imagenes/jugador14.jpg" alt="Imagen Jugador 1">
-      <img src="./Imagenes/porto.png" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> FC Porto (POR)</p>
-      <p><strong>Posición:</strong> Defensor Central</p>
-      <p><strong> Nombre/Apellido:</strong> Silva Rui</p>
-      <p><strong>Edad:</strong> 30</p>
-      <p><strong>Altura:</strong> 1.85 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 41</h2>
-        <img src="./Imagenes/jugador41.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/pick.jpg" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> OTP Bank - PICK Szeged (HUN)</p>
+      <h2>Jugador N° 33</h2>
+      <img src="./Imagenes/jugador33mundial.jpg" alt="Imagen Jugador 1">
+      <img src="./Imagenes/dinamarca.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Dinamarca</p>
       <p><strong>Posición:</strong> Lateral Derecho</p>
-      <p><strong> Nombre/Apellido:</strong> Garciandia Alustiza Imanol</p>
+      <p><strong> Nombre/Apellido:</strong> Mathias Gidsel</p>
+      <p><strong>Edad:</strong> 24</p>
+      <p><strong>Altura:</strong> 1.90 m</p>
+      </div>
+    <div class="jugador">
+      <h2>Jugador N° 5</h2>
+      <img src="./Imagenes/jugador5mundial2.webp" alt="Imagen Jugador 1">
+      <img src="./Imagenes/francia.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Francia</p>
+      <p><strong>Posición:</strong> Lateral derecho</p>
+      <p><strong> Nombre/Apellido:</strong> Nedim Remili</p>
       <p><strong>Edad:</strong> 28</p>
-      <p><strong>Altura:</strong> 2.03 m</p>
-    </div>  
+      <p><strong>Altura:</strong> 1.95 m</p>
+      </div>
     <div class="jugador">
-      <h2>Jugador N° 55</h2>
-        <img src="./Imagenes/jugador55.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/plock.png" alt="Imagen Jugador 1">
-      <p><strong>Equipo:</strong> Orlen Wisla Plock (POL)</p>
+      <h2>Jugador N° 11</h2>
+        <img src="./Imagenes/Jugador11mundial.jpg" alt="Imagen Jugador 1">
+        <img src="./Imagenes/islandia.png" alt="Imagen Jugador 1">
+      <p><strong>Equipo:</strong> Islandia</p>
       <p><strong>Posición:</strong> Defensor Central</p>
-      <p><strong> Nombre/Apellido:</strong> Mindegia Elizaga Niko</p>
-      <p><strong>Edad:</strong> 35</p>
-      <p><strong>Altura:</strong> 1.82 m</p>
-    </div>
-    <div class="jugador">
-      <h2>Jugador N° 44</h2>
-        <img src="./Imagenes/jugador44.jpg" alt="Imagen Jugador 1">
-        <img src="./Imagenes/pick.jpg" alt="Imagen Jugador 1">
-       <p><strong>Equipo:</strong> OTP Bank - PICK Szeged (HUN)</p>
-       <p><strong>Posición:</strong> Defensor Central</p>
-       <p><strong> Nombre/Apellido:</strong> Bombac Dean</p>
-       <p><strong>Edad:</strong> 34</p>
-       <p><strong>Altura:</strong> 1.90 m</p>
+      <p><strong> Nombre/Apellido:</strong> Gísli Þorgeir Kristjánsson</p>
+      <p><strong>Edad:</strong> 24</p>
+      <p><strong>Altura:</strong> 1.91 m</p>
     </div>
   </main>
     <footer class="footer">
