--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -811,10 +811,43 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
+                    <img src="./imagenes/Jugadores/manuel_balague.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Manuel Balagué - Opuesto</h3>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/feva/fondoback2.png" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/pablo_koukartsev.webp" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Pablo Koukartsev - Opuesto</h3>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/feva/fondoback2.png" alt="">
+                </div>
+                <div class="jugador">
                     <img src="./imagenes/Jugadores/luciano_dececco.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Luciano De Cecco - Armador</h3>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/feva/fondoback2.png" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/matias_sanchez.jpg" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Matias Sanchez - Armador</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -844,7 +877,29 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/santiago_danani.jpeg" alt="">
+                    <img src="./imagenes/Jugadores/facundo_conte.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Facundo Conte - Punta</h3>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/feva/fondoback2.png" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/luciano_palonsky.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Luciano Palonsky - Punta</h3>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/feva/fondoback2.png" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/santiago_danani.jpeg" alt="Santiago Danani">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Santiago Danani - Líbero</h3>
@@ -855,10 +910,10 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/pablo_koukartsev.webp" alt="">
+                    <img src="./imagenes/Jugadores/nicolas_zerba.png" alt="Nicolas Zerba">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Pablo Koukartsev - Opuesto</h3>
+                    <h3 class="titulo_info">Nicolas Zerba - Punta</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -866,10 +921,10 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/manuel_balague.png" alt="">
+                    <img src="./imagenes/Jugadores/nicolas_mendez.png" alt="Nicolás Méndez">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Manuel Balagué - Opuesto</h3>
+                    <h3 class="titulo_info">Nicolás Méndez - Punta</h3>
                 </div>
             </div>
 
