--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -800,7 +800,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/bruno_lima.webp" alt="">
+                    <img src="./imagenes/Jugadores/bruno_lima.webp" alt="Bruno Lima">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Bruno Lima - Opuesto</h3>
@@ -811,7 +811,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/manuel_balague.png" alt="">
+                    <img src="./imagenes/Jugadores/manuel_balague.png" alt="Manuel Balague">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Manuel Balagué - Opuesto</h3>
@@ -822,7 +822,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/pablo_koukartsev.webp" alt="">
+                    <img src="./imagenes/Jugadores/pablo_koukartsev.webp" alt="Pablo Koukartsev">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Pablo Koukartsev - Opuesto</h3>
@@ -833,7 +833,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/luciano_dececco.png" alt="">
+                    <img src="./imagenes/Jugadores/luciano_dececco.png" alt="Luciano De Cecco">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Luciano De Cecco - Armador</h3>
@@ -844,7 +844,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/matias_sanchez.jpg" alt="">
+                    <img src="./imagenes/Jugadores/matias_sanchez.jpg" alt="Matias Sanchez">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Matias Sanchez - Armador</h3>
@@ -855,7 +855,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agus_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/agus_loser.png" alt="Agustin Loser">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Agustin Loser - Central</h3>
@@ -866,7 +866,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/ezequiel_palacios.jpeg" alt="">
+                    <img src="./imagenes/Jugadores/ezequiel_palacios.jpeg" alt="Ezequiel Palacios">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Ezequiel Palacios - Punta</h3>
@@ -877,7 +877,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/facundo_conte.png" alt="">
+                    <img src="./imagenes/Jugadores/facundo_conte.png" alt="Facundo Conte">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Facundo Conte - Punta</h3>
@@ -888,7 +888,7 @@
                     <img src="./imagenes/feva/fondoback2.png" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/luciano_palonsky.png" alt="">
+                    <img src="./imagenes/Jugadores/luciano_palonsky.png" alt="Luciano Palonsky">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Luciano Palonsky - Punta</h3>
