cambio de color

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -803,7 +803,7 @@
                     <img src="./imagenes/Jugadores/bruno_lima.webp" alt="Bruno Lima">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Bruno Lima - Opuesto</h3>
+                    <h3 class="titulo_info2">Bruno Lima - Opuesto</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -814,7 +814,7 @@
                     <img src="./imagenes/Jugadores/manuel_balague.png" alt="Manuel Balague">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Manuel Balagué - Opuesto</h3>
+                    <h3 class="titulo_info2">Manuel Balagué - Opuesto</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -825,7 +825,7 @@
                     <img src="./imagenes/Jugadores/pablo_koukartsev.webp" alt="Pablo Koukartsev">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Pablo Koukartsev - Opuesto</h3>
+                    <h3 class="titulo_info2">Pablo Koukartsev - Opuesto</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -836,7 +836,7 @@
                     <img src="./imagenes/Jugadores/luciano_dececco.png" alt="Luciano De Cecco">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Luciano De Cecco - Armador</h3>
+                    <h3 class="titulo_info2">Luciano De Cecco - Armador</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -847,7 +847,7 @@
                     <img src="./imagenes/Jugadores/matias_sanchez.jpg" alt="Matias Sanchez">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Matias Sanchez - Armador</h3>
+                    <h3 class="titulo_info2">Matias Sanchez - Armador</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -858,7 +858,7 @@
                     <img src="./imagenes/Jugadores/agus_loser.png" alt="Agustin Loser">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Agustin Loser - Central</h3>
+                    <h3 class="titulo_info2">Agustin Loser - Central</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -869,7 +869,7 @@
                     <img src="./imagenes/Jugadores/ezequiel_palacios.jpeg" alt="Ezequiel Palacios">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Ezequiel Palacios - Punta</h3>
+                    <h3 class="titulo_info2">Ezequiel Palacios - Punta</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -880,7 +880,7 @@
                     <img src="./imagenes/Jugadores/facundo_conte.png" alt="Facundo Conte">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Facundo Conte - Punta</h3>
+                    <h3 class="titulo_info2">Facundo Conte - Punta</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -891,7 +891,7 @@
                     <img src="./imagenes/Jugadores/luciano_palonsky.png" alt="Luciano Palonsky">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Luciano Palonsky - Punta</h3>
+                    <h3 class="titulo_info2">Luciano Palonsky - Punta</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -902,7 +902,7 @@
                     <img src="./imagenes/Jugadores/santiago_danani.jpeg" alt="Santiago Danani">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Santiago Danani - Líbero</h3>
+                    <h3 class="titulo_info2">Santiago Danani - Líbero</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -913,7 +913,7 @@
                     <img src="./imagenes/Jugadores/nicolas_zerba.png" alt="Nicolas Zerba">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Nicolas Zerba - Punta</h3>
+                    <h3 class="titulo_info2">Nicolas Zerba - Punta</h3>
                 </div>
             </div>
             <div class="estadisticas">
@@ -924,7 +924,7 @@
                     <img src="./imagenes/Jugadores/nicolas_mendez.png" alt="Nicolás Méndez">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Nicolás Méndez - Punta</h3>
+                    <h3 class="titulo_info2">Nicolás Méndez - Punta</h3>
                 </div>
             </div>
 
