--- a/pages/deportes/futbol/asistencias/asistencias.html
+++ b/pages/deportes/futbol/asistencias/asistencias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASISTENCIAS</title>
     <link rel="stylesheet" href="asistencias.css">
+    <link rel="shortcut icon" href="../images/futbol-solid.svg" type="image/x-icon">
 </head>
 <body>
     <header>
