--- a/pages/deportes/futbol/goleadores/goleadores.html
+++ b/pages/deportes/futbol/goleadores/goleadores.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOLEADORES</title>
     <link rel="stylesheet" href="goleadores.css">
+    <link rel="shortcut icon" href="../images/futbol-solid.svg" type="image/x-icon">
 </head>
 <body>
     <header>
