--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -25,11 +25,9 @@
                 </button>
             </div>
             <div class="ingreso">
-                <button class="animated-button" onclick="window.location.href = ''">
-                <a href="../../../login/login.html">LOGIN</a>
+                <button class="animated-button" onclick="window.location.href = '../../../login/login.html'">LOGIN</a>
                 </button>
-                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-                <a href="#">REGISTRO</a>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">REGISTRO</a>
                 </button>
             </div>
         </nav>
