--- a/pages/deportes/futbol/champions_league/champions_league.html
+++ b/pages/deportes/futbol/champions_league/champions_league.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHAMPIONS LEAGUE</title>
     <link rel="stylesheet" href="champions_league.css">
+    <link rel="shortcut icon" href="../images/champions_favicon.png" type="image/x-icon">
 </head>
 <body>
     <nav>
