--- a/pages/deportes/futbol/eliminatorias_sudamericanas/eliminatorias_sudamericanas.html
+++ b/pages/deportes/futbol/eliminatorias_sudamericanas/eliminatorias_sudamericanas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliminatorias Sudamericanas</title>
     <link rel="stylesheet" href="eliminatorias_sudamericanas.css">
+    <link rel="shortcut icon" href="../images/conmebol-favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
