--- a/pages/deportes/futbol/liga_argentina/liga_argentina.html
+++ b/pages/deportes/futbol/liga_argentina/liga_argentina.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#"><img src="../images/logo.PNG" alt="Logo"></a>
+                <a href="#"><img src="../images/logo.jpeg" alt="Logo"></a>
             </div>
             <div class="enlaces">
                 <button class="animated-button" onclick="window.location.href = '../../futbol/home_futbol.html'">ATRAS</a>
