--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -25,23 +25,28 @@
     </style>
 </head>
 <body>
-    <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
-            <span>ATRAS</span>
-            <span></span>
-        </button>
-        <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-            <span>DEPORTES</span>
-            <span></span>
-        </button>
-        <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/fotos f1/fotos_f1.html'">
-            <span>BIBLIOTECA</span>
-            <span></span>
-        </button>
-        <button class="animated-button" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
-            <span>ESTADISTICAS</span>
-            <span></span>
-        </button>
+    <div class="Cabecera">
+        <div class="Logo">
+            <img src="./f1 depologs b.png" height="50px">
+        </div>
+        <div class="botonera">
+            <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
+                <span>ATRAS</span>
+                <span></span>
+            </button>
+            <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+                <span>DEPORTES</span>
+                <span></span>
+            </button>
+            <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/fotos f1/fotos_f1.html'">
+                <span>BIBLIOTECA</span>
+                <span></span>
+            </button>
+            <button class="animated-button" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
+                <span>ESTADISTICAS</span>
+                <span></span>
+            </button>
+        </div>
     </div>
     
     <!--
